--- a/aboutus.css
+++ b/aboutus.css
@@ -180,6 +180,11 @@ span {
   color: rgba(175, 175, 175, 1);
   margin: 0 220px;
 }
+.dark h5{
+  color: rgba(175, 175, 175, 1);
+  width: 800px;
+  margin: 0 auto;
+}
 .card {
   /* display: flex;
   align-items: center;
@@ -536,6 +541,7 @@ img {
   .dark h5{
     color: rgba(225, 225, 225, 1);
     font-size: 14px;
+    width: 360px;
   }
 
   .value {
