--- a/category.css
+++ b/category.css
@@ -74,7 +74,7 @@ body {
   text-align: center;
   margin-bottom: 1rem;
 }
-.portfolio > h5 {
+.portfolio h5 {
   text-align: center;
   max-width: 520px;
   margin: auto;
@@ -279,8 +279,9 @@ img {
   .footer h4 {
     font-weight: 700;
   }
-  .brand {
-    /* margin-left: -88px; */
+
+  #foot-h{
+    margin-bottom: 16px;
   }
   
   .brand .logo {
@@ -297,6 +298,7 @@ img {
     color: rgba(254, 254, 254, 1);
     justify-content: center;
     align-items: center;
+    margin-bottom: 24px;
   }
   .social div {
     width: 24px;
@@ -318,5 +320,4 @@ img {
   .copyright > p {
     font-size: 14px;
   }
-}
 }
