--- a/services.css
+++ b/services.css
@@ -298,33 +298,33 @@ body {
   margin-top: 2rem;
   margin-bottom: 4rem;
 }
-.head {
+/* .head {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin-top: 4rem;
   margin-bottom: 2rem;
-}
-.head > div {
+} */
+/* .head > div {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .head > div > a > h4 {
   font-weight: 500;
-}
-.line {
+} */
+/* .line {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 4rem;
-}
-.head-1 {
+} */
+/* .head-1 {
   color: rgba(255, 95, 0, 1);
-}
-#hr-1 {
+} */
+/* #hr-1 {
   height: 4px;
   border-radius: 4px;
   background-color: rgba(255, 95, 0, 1);
-}
+} */
 
 .question {
   font-size: 1.25rem;
@@ -465,7 +465,8 @@ span {
 }
 #foot-h {
   color: rgba(34, 34, 34, 1);
-  margin-bottom: 2rem;
+  margin-top: 16px;
+  margin-bottom: 8px;
 }
 #foot-p {
   color: rgba(107, 107, 107, 1);
@@ -598,7 +599,7 @@ img {
     line-height: 1.4;
   }
   .work {
-    padding: 40px 24px;
+    padding: 24px 24px;
   }
   .work h5 {
     font-size: 15px;
@@ -606,7 +607,7 @@ img {
   }
   .work h3,
   .work span {
-    font-size: 2rem;
+    font-size: 24px;
   }
   .icon {
     flex-direction: column;
@@ -621,10 +622,14 @@ img {
   }
   .contact {
     padding: 40px 24px;
+    margin-top: 0;
   }
   .contact h3,
   .contact span {
-    font-size: 2rem;
+    font-size: 24px;
+  }
+  .contact .button{
+    margin-top: 24px;
   }
   .footer {
     display: flex;
@@ -708,9 +713,15 @@ img {
   }
   .column {
     grid-template-columns: 1fr;
+    gap: 24px;
   }
   .automation h3 {
-    font-size: 2rem;
+    font-size: 24px;
+    margin-bottom: 24px;
+    line-height: 2rem;
+  }
+  .section{
+    margin-bottom: 16px;
   }
   .section h4 {
     font-size: 20px;
@@ -731,7 +742,7 @@ img {
   }
   .black h3 {
     margin: 20px 24px;
-    font-size: 20px;
+    font-size: 24px;
     line-height: 1.4;
   }
   #ad-2 {
@@ -771,7 +782,7 @@ img {
   .testimonial h3 {
     font-size: 24px;
     margin-top: 8px;
-    margin-bottom: 1rem;
+    margin-bottom: 8px;
   }
   .testimonial h4 {
     font-size: 14px;
