--- a/aboutus.css
+++ b/aboutus.css
@@ -91,7 +91,7 @@ h5 {
 .ab {
   display: flex;
   align-items: center;
-  gap: 1.25rem;
+  /* gap: 1.25rem; */
   margin-bottom: 1rem;
 }
 .big-img {
