--- a/customer.css
+++ b/customer.css
@@ -78,13 +78,32 @@ body {
 
 /* ----card section ----  */
 .card {
-  display: flex;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 24px;
   margin: 1.25rem 0 0 0;
 }
 .card div {
-  border: 24px solid rgba(255, 205, 176, 1);
+  border: 8px solid rgba(255, 205, 176, 1);
   border-radius: 8px;
+}
+.review{
+  padding: 1rem;
+}
+.review h5{
+  font-size: 16px;
+  font-weight: 700;
+  color: rgba(34, 34, 34, 1);
+  margin-bottom: 4px;
+}
+.review p{
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(107, 107, 107, 1);
+}
+.review i{
+  margin: 1rem 0;
+  color: rgba(255, 196, 3, 1);
 }
 
 #vdo {
@@ -206,6 +225,9 @@ span {
   align-items: center;
   justify-content: center;
   transition: transform 0.3s ease;
+}
+.social a{
+  color: rgba(254, 254, 254, 1);
 }
 .copyright {
   text-align: center;
