--- a/style.css
+++ b/style.css
@@ -415,6 +415,7 @@ iframe {
 .answer {
   line-height: 1.5rem;
   padding: 0rem 2rem;
+margin-top: -16px;
   padding-bottom: 1.5rem;
   display: none;
   transition: opacity 0.3s ease;
@@ -890,6 +891,7 @@ img {
     color: rgba(107, 107, 107, 1);
     line-height: 1.5rem;
     padding: 16px;
+    padding-top: 0;
     display: none;
     transition: opacity 0.3s ease;
   }
