--- a/navbar.css
+++ b/navbar.css
@@ -76,6 +76,7 @@ li {
   z-index: 999;
   left: 0;
 
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.4);           
 }
 .nav .hasSubMenu:hover .sub-menu {
   top: 15px;
@@ -101,6 +102,8 @@ li {
   z-index: 999;
   width: 350%;
   max-width: 300px;
+
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
 }
 .sub-menu-s {
   list-style-type: none;
@@ -135,6 +138,7 @@ li {
     /* justify-content: flex-start; */
     /* align-items: flex-start; */
     align-items: center;
+    text-align: center;
     background: rgb(255, 255, 255);
     border-bottom: 1px solid #ededed;
     position: absolute;
@@ -150,6 +154,9 @@ li {
     /* align-items: stretch; */
     /* border-left: 1px solid rgba(107, 107, 107, 0.1); */
     border-left: 1px solid rgba(34, 34, 34, 0.1);
+    border-radius: 6px;
+    
+    box-shadow: -8px 8px 24px rgba(34,34,34,0.6); 
   }
   .navbar .cta {
     display: none;
@@ -166,8 +173,9 @@ li {
 
   .hamburger {
     width: 32px;
-    height: 2px;
-    background-color: rgba(34, 34, 34, 1);
+    height: 4px;
+    border-radius: 6px;
+    background-color: rgba(34, 34, 34, 0.8);
     position: relative;
   }
 
@@ -176,8 +184,9 @@ li {
     content: "";
     position: absolute;
     width: 100%;
-    height: 2px;
-    background-color: rgba(34, 34, 34, 1);
+    height: 4px;
+    border-radius: 6px;
+    background-color: rgba(34, 34, 34, 0.8);
   }
 
   .hamburger::before {
@@ -188,6 +197,7 @@ li {
     bottom: -8px;
   }
 
+  
   .sub-menu {
     border: none;
     margin-top: 0;
@@ -197,6 +207,7 @@ li {
     position: absolute;
     /* top: -9999px; */
     z-index: 0;
+    box-shadow: none;
   }
   .sub-menu:hover li{
     color: rgba(255, 95, 0, 1);
@@ -222,6 +233,7 @@ li {
     z-index: 999;
     width: 190%;
     max-width: 250px;
+      box-shadow: none;
   }
   .nav .hasSubMenu:hover .horizontal {
     top: 10px;
