--- a/navbar.css
+++ b/navbar.css
@@ -123,7 +123,7 @@ li {
 @media only screen and (max-width: 576px) {
   .navbar {
     width: 100%;
-    padding: 12px 24px 12px 24px;
+    padding: 12px 24px;
     position: relative;
   }
   .nav {
@@ -133,24 +133,27 @@ li {
     display: flex;
     flex-direction: column;
     gap: 32px;
-    /* justify-content: flex-start; */
-    /* align-items: flex-start; */
     align-items: center;
     text-align: center;
     background: rgb(255, 255, 255);
     border-bottom: 1px solid #ededed;
-    position: absolute;
-    top: 100%;
+    /* position: absolute; */
+    position: fixed;
+
+    /* top: 100%; */
+    top: 48px;
+
     width: 80%;
+
     right: -100%;
     padding: 30px;
     padding-top: 32px;
     padding-bottom: 50px;
     z-index: 9999;
-    height: calc(100vh - 56px);
+    /* height: calc(100vh - 56px); */
+    height: 100vh;
+
     overflow-y: auto;
-    /* align-items: stretch; */
-    /* border-left: 1px solid rgba(107, 107, 107, 0.1); */
     border-left: 1px solid rgba(34, 34, 34, 0.1);
     border-radius: 6px;
     
