--- a/aboutus.css
+++ b/aboutus.css
@@ -74,11 +74,12 @@ body {
   justify-content: space-between;
 }
 .about hr {
-  width: 5.5rem;
+  width: 2rem;
   height: 4px;
   background-color: rgba(34, 34, 34, 1);
   border-radius: 4px;
   border: none;
+  margin-right: 6px;
 }
 .about > h1,
 span {
@@ -240,13 +241,12 @@ span {
 }
 .orange-1 {
   position: absolute;
-  margin-top: -36px;
+  margin-top: -46px;
   z-index: -9;
   color: rgba(255, 95, 0, 1);
 }
 .orange-2 {
   position: absolute;
-  margin-top: -18px;
   margin-left: 250px;
   z-index: -9;
   color: rgba(255, 95, 0, 1);
@@ -569,11 +569,12 @@ img {
   }
   .orange-1 {
     font-size: 1.6rem !important;
-    margin-top: -33px;
+    margin-top: -43px;
   }
   .orange-2 {
     right: 0;
     font-size: 1.6rem !important;
+    margin-top: 1px;
   }
   .tp > h5 {
     font-size: 15px;
