--- a/obm.css
+++ b/obm.css
@@ -243,9 +243,7 @@ span {
 .footer h4 {
   font-weight: 700;
 }
-.brand {
-  margin-right: 30rem;
-}
+
 .brand .logo {
   margin-bottom: 1rem;
 }
@@ -268,6 +266,10 @@ span {
   justify-content: center;
   transition: transform 0.3s ease;
 }
+.social a{
+  color: rgba(254, 254, 254, 1);
+}
+
 .copyright {
   text-align: center;
   background-color: rgba(255, 181, 138, 1);
@@ -286,6 +288,7 @@ img {
   max-width: 100%;
   vertical-align: middle;
 }
+
 @media only screen and (max-width: 576px) {
 
   .about {
@@ -451,6 +454,7 @@ img {
     justify-content: center;
     flex-direction: column;
   }
+  
   .hideMob {
     display: none;
   }
@@ -490,6 +494,7 @@ img {
     justify-content: center;
     transition: transform 0.3s ease;
   }
+  
 
   .copyright {
     text-align: center;
@@ -551,4 +556,5 @@ img {
     margin-top: 16px;
     margin-bottom: 8px;
   }
+
 }
