--- a/p_inner.css
+++ b/p_inner.css
@@ -152,7 +152,29 @@ body {
 
 
 /* contact section starts */
+img {
+  max-width: 100%;
+  vertical-align: middle;
+}
+.contact {
+  position: relative;
+}
 
+.bg {
+  position: absolute;
+}
+.contact > .bg {
+  margin-top: 80px;
+  position: absolute;
+  /* z-index: 1; */
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.contact > .bg img {
+  max-height: 200px;
+  width: 100%;
+}
 .contact {
   margin-top: 5.5rem;
   text-align: center;
@@ -211,7 +233,6 @@ span {
 }
 
 /* footer section starts */
-
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -221,9 +242,7 @@ span {
 .footer h4 {
   font-weight: 700;
 }
-.brand {
-  margin-right: 30rem;
-}
+
 .brand .logo {
   margin-bottom: 1rem;
 }
@@ -246,6 +265,10 @@ span {
   justify-content: center;
   transition: transform 0.3s ease;
 }
+.social a{
+  color: rgba(254, 254, 254, 1);
+}
+
 .copyright {
   text-align: center;
   background-color: rgba(255, 181, 138, 1);
@@ -260,29 +283,11 @@ span {
   color: rgba(107, 107, 107, 1);
   margin-bottom: 1rem;
 }
-.contact {
-    position: relative;
-  }
-  
-  .bg {
-    position: absolute;
-  }
-  .contact > .bg {
-    margin-top: 80px;
-    position: absolute;
-    /* z-index: 1; */
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
-  .contact > .bg img {
-    max-height: 200px;
-    width: 100%;
-  }
 img {
   max-width: 100%;
   vertical-align: middle;
 }
+
 @media only screen and (max-width: 576px) {
 
 
@@ -439,6 +444,13 @@ img {
   .contact .button{
     margin-top: 24px;
   }
+  .contact > .bg img {
+    max-height: 200px;
+    width: 100%;
+    z-index: -9;
+  }
+
+  
   .footer {
     display: flex;
     background-color: rgba(255, 205, 176, 1);
