--- a/indus_inner.css
+++ b/indus_inner.css
@@ -210,9 +210,7 @@ span {
 .footer h4 {
   font-weight: 700;
 }
-.brand {
-  margin-right: 30rem;
-}
+
 .brand .logo {
   margin-bottom: 1rem;
 }
@@ -235,6 +233,10 @@ span {
   justify-content: center;
   transition: transform 0.3s ease;
 }
+.social a{
+  color: rgba(254, 254, 254, 1);
+}
+
 .copyright {
   text-align: center;
   background-color: rgba(255, 181, 138, 1);
@@ -253,6 +255,7 @@ img {
   max-width: 100%;
   vertical-align: middle;
 }
+
 @media only screen and (max-width: 576px) {
   
   h3 {
