--- a/navbar.css
+++ b/navbar.css
@@ -20,7 +20,7 @@
 a {
   text-decoration: none;
   font-size: 1.25rem;
-  font-weight: 400;
+  font-weight: 500;
   color: rgba(34, 34, 34, 1);
 }
 .cta {
@@ -48,7 +48,7 @@ a {
   color: rgba(255, 95, 0, 1);
 }
 li p {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 18px;
 }
 li {
@@ -101,7 +101,7 @@ li {
   z-index: 999;
   width: 350%;
   max-width: 300px;
-  box-shadow: 0px 4px 15px rgba(0,0,0,0.4);
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.8);
 }
 .sub-menu-s {
   list-style-type: none;
@@ -123,6 +123,7 @@ li {
 .cross{
   display: none;
 }
+
 @media only screen and (max-width: 576px) {
   
   .cross{
@@ -161,10 +162,10 @@ li {
     position: fixed;
 
     /* top: 100%; */
-    top: 48px;
-    /* top: 0; */
+    /* top: 48px; */
+    top: 0;
 
-    width: 80%;
+    width: 100%;
 
     right: -100%;
     padding: 30px;
@@ -270,8 +271,9 @@ li {
     background-color: rgba(255, 95, 0, 1);
     color: rgba(255, 255, 255, 1);
     padding: 16px;
-    padding-left: 70px;
     border-radius: 32px;
+    align-items: center;
+    justify-content: center;
   }
   .mobile-cta a{
     text-align: center;
@@ -329,7 +331,6 @@ li {
     background-color: rgba(255, 95, 0, 1);
     color: rgba(255, 255, 255, 1);
     padding: 16px;
-    padding-left: 70px;
     border-radius: 32px;
   }
   .mobile-cta a{
