--- a/portfolio.css
+++ b/portfolio.css
@@ -234,9 +234,7 @@ span {
 .footer h4 {
   font-weight: 700;
 }
-.brand {
-  margin-right: 30rem;
-}
+
 .brand .logo {
   margin-bottom: 1rem;
 }
@@ -259,6 +257,10 @@ span {
   justify-content: center;
   transition: transform 0.3s ease;
 }
+.social a{
+  color: rgba(254, 254, 254, 1);
+}
+
 .copyright {
   text-align: center;
   background-color: rgba(255, 181, 138, 1);
@@ -273,6 +275,11 @@ span {
   color: rgba(107, 107, 107, 1);
   margin-bottom: 1rem;
 }
+img {
+  max-width: 100%;
+  vertical-align: middle;
+}
+
 @media only screen and (max-width: 576px) {
   h3{
     font-size: 24px;
