--- a/services.css
+++ b/services.css
@@ -450,9 +450,7 @@ span {
 .footer h4 {
   font-weight: 700;
 }
-.brand {
-  margin-right: 30rem;
-}
+
 .brand .logo {
   margin-bottom: 1rem;
 }
@@ -475,6 +473,10 @@ span {
   justify-content: center;
   transition: transform 0.3s ease;
 }
+.social a{
+  color: rgba(254, 254, 254, 1);
+}
+
 .copyright {
   text-align: center;
   background-color: rgba(255, 181, 138, 1);
@@ -483,8 +485,8 @@ span {
 }
 #foot-h {
   color: rgba(34, 34, 34, 1);
-  margin-top: 16px;
-  margin-bottom: 8px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 #foot-p {
   color: rgba(107, 107, 107, 1);
@@ -494,6 +496,7 @@ img {
   max-width: 100%;
   vertical-align: middle;
 }
+
 @media only screen and (max-width: 576px) {
   .about {
     margin: 0 24px;
